--- a/src/main/resources/templates/configs/form.html
+++ b/src/main/resources/templates/configs/form.html
@@ -1,36 +1,110 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	layout:decorator="layout">
-<head>
-<title>Messages : Create</title>
-</head>
-<body>
-	<div layout:fragment="content" class="container">
-		<h1 layout:fragment="header">Config Tree : Create</h1>
-		<form id="configToolForm" th:action="@{/configuration/(form)}" th:object="${configTreeDomain}" action="#" method="post">
-			<div th:if="${#fields.hasErrors('*')}" class="alert alert-error">
-				<p th:each="error : ${#fields.errors('*')}" th:text="${error}">
-					Validation error
-				</p>
+
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="layout">
+	<head>
+		<title>Configurations : Create</title>
+	</head>
+	<body>
+		<div layout:fragment="content" class="container-fluid">
+			
+			<br/><br/>
+			<div class="page-header">
+				<h1>Configurations : Create</h1>
 			</div>
-			<div class="pull-right">
-				<a th:href="@{/configuration}" href="configuration.html"> Config Tool </a>
+			
+			<div class="row">
+				<div class="col-lg-8">
+					<div class="well">
+						<form id="configToolForm" class="form-horizontal" th:action="@{/configuration/(form)}" th:object="${configTreeDomain}" action="#" method="post">
+						  <fieldset>
+						    <div th:if="${#fields.hasErrors('*')}" class="alert alert-error">
+								<p th:each="error : ${#fields.errors('*')}" th:text="${error}">Validation Error</p>
+							</div>
+							
+							<!-- START: Hidden fields -->
+							<input type="hidden" th:field="*{id}" th:class="${#fields.hasErrors('id')} ? 'field-error'" /> 
+							<input type="hidden" th:field="*{parentId}" th:class="${#fields.hasErrors('parentId')} ? 'field-error'" /> 
+							<input type="hidden" th:field="*{nodeLevel}" th:class="${#fields.hasErrors('nodeLevel')} ? 'field-error'" />
+							<!-- END: Hidden fields -->
+							
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Root</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Component</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Environment</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Brand</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Locale</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <label for="root" class="col-lg-2 control-label">Entity</label>
+						      <div class="col-lg-10">
+						        <select th:field="*{root}" class="form-control">
+									<option value="" th:text="Select"></option>
+					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
+				        		</select>
+						      </div>
+						    </div>
+						    <div class="form-group">
+						      <div class="col-lg-10 col-lg-offset-2">
+						      	<a th:href="@{/configuration}" class="btn btn-default" href="configuration.html">Cancel</a>
+						        <button type="submit" class="btn btn-primary">Submit</button>
+						      </div>
+						    </div>
+						  </fieldset>
+						</form>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="well">
+						<h1>Informations</h1>
+						<hr/>
+						<p>Raw denim you probably haven't heard of them
+						jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
+						master cleanse. Mustache cliche tempor, williamsburg carles vegan
+						helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
+						Cosby sweater eu banh mi, qui irure terry richardson ex squid.
+						Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan
+						american apparel, butcher voluptate nisi qui.</p>
+					</div>
+				</div>
 			</div>
-			<input type="hidden" th:field="*{id}" th:class="${#fields.hasErrors('id')} ? 'field-error'" /> 
-			<input type="hidden" th:field="*{parentId}" th:class="${#fields.hasErrors('parentId')} ? 'field-error'" /> 
-			<input type="hidden" th:field="*{nodeLevel}" th:class="${#fields.hasErrors('nodeLevel')} ? 'field-error'" /> 
-			<label for="summary">Root</label> 
-			<select th:field="*{root}" th:class="${#fields.hasErrors('root')} ? 'field-error'">
-	            <option th:each="option : ${rootOptions}" th:value="${option.getOption()}" 
-	                    th:text="${option.getOptionName()}">Options</option>
-        	</select>
-			<label for="text">Component</label>
-			<textarea th:field="*{component}" th:class="${#fields.hasErrors('component')} ? 'field-error'"></textarea>
-			<div class="form-actions"> 
-				<input type="submit" value="Save" />
-			</div>
-		</form>
-	</div>
-</body>
+		</div>
+	</body>
 </html>
