--- a/src/main/resources/templates/configs/list.html
+++ b/src/main/resources/templates/configs/list.html
@@ -6,12 +6,18 @@
 <title>Configurations</title>
 </head>
 <body>
-	<div layout:fragment="content" class="container">
-		<h1>Configurations</h1>
+
+	<div layout:fragment="content" class="container-fluid">
+	
+		<br/><br/>
+		<div class="page-header">
+			<h1>Configurations</h1>
+		</div>
+		
 		<div class="pull-right">
 			<a href="form.html" th:href="@{/configuration/(form)}">Create Entity</a>
 		</div>
-		<table class="table table-bordered table-striped">
+		<table class="table table-striped table-hover ">
 			<thead>
 				<tr>
 					<td>ID</td>
