Updated config tree view

--- a/src/main/resources/templates/configs/form.html
+++ b/src/main/resources/templates/configs/form.html
@@ -5,7 +5,7 @@
 		<title>Configurations : Create</title>
 	</head>
 	<body>
-		<div layout:fragment="content" class="container-fluid">
+		<div layout:fragment="content" class="container">
 			
 			<br/><br/>
 			<div class="page-header">
