Form validation related changes
1. Added jQuery Form Validation plugin
2. Added MasterDataService to server master data to view
3. Removed server side validation from config tree

--- a/src/main/resources/templates/configs/form.html
+++ b/src/main/resources/templates/configs/form.html
@@ -30,7 +30,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Root</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{root}" class="form-control">
+						        <select th:field="*{root}" class="form-control" onchange="rootFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${rootOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -39,7 +39,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Component</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{component}" class="form-control">
+						        <select th:field="*{component}" class="form-control" onchange="componentFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${compOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -48,7 +48,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Environment</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{environment}" class="form-control">
+						        <select th:field="*{environment}" class="form-control" onchange="environmentFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${envOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -57,7 +57,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Brand</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{brand}" class="form-control">
+						        <select th:field="*{brand}" class="form-control" onchange="brandFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${brandOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -66,7 +66,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Locale</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{locale}" class="form-control">
+						        <select th:field="*{locale}" class="form-control" onchange="localeFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${localeOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -75,7 +75,7 @@
 						    <div class="form-group">
 						      <label for="root" class="col-lg-2 control-label">Entity</label>
 						      <div class="col-lg-10">
-						        <select th:field="*{entity}" class="form-control">
+						        <select th:field="*{entity}" class="form-control" onchange="entityFieldConditions();">
 									<option value="" th:text="Select"></option>
 					            	<option th:each="option : ${entityOptions}" th:value="${option.getOption()}" th:text="${option.getOptionName()}">Options</option>
 				        		</select>
@@ -106,5 +106,8 @@
 				</div>
 			</div>
 		</div>
+		
+		<script layout:fragment="scripts" th:src="@{/js/form-handler.js}" src="../js/form-handler.js"></script>
+		
 	</body>
 </html>
