--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
 <title>Layout</title>
 <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}"
-	href="../../css/bootstrap.min.css" />
+	href="../bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -14,6 +14,17 @@
 			</div>
 		</div>
 	</nav>
-	<div layout:fragment="content">Fake content</div>
+	<div layout:fragment="content">Content</div>
+	
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script th:src="@{/bootstrap/js/bootstrap.min.js}" src="../bootstrap/js/bootstrap.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.15.0/jquery.validate.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.15.0/additional-methods.min.js"></script>
+	
+	<script layout:fragment="scripts" type="text/javascript">
+	$(function() {
+	    console.log( "Custome scripts not found." );
+	});
+	</script>
 </body>
 </html>
